--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         
     </body>
   </html>
-    <script src="script.js"></script>
+    <!-- <script type="module" src="/Ping_Pong/2D/offline/ball.js"></script> -->
+    <script type="module" src="old.js"></script>
 </body>
 
 </html>
