--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <h1 id="wh2"></h1>
         <div id="game">
           <div id="ball"></div>
+          <div id="counterHoler">
+            <h1 id="counter"></h1>
+          </div>
+          
           <div id="board">
 
             <div id="playerLeft" class="player"></div>
@@ -31,7 +35,7 @@
     </body>
   </html>
     <!-- <script type="module" src="/Ping_Pong/2D/offline/ball.js"></script> -->
-    <script type="module" src="old.js"></script>
+    <script type="module" src="./Ping_Pong/2D/offline/main.js"></script>
 </body>
 
 </html>
