--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
   <title>Draw a board</title>
   </head>
     <body>
-        <h1 id="wh1"></h1>
-        <h1 id="wh2"></h1>
+        <div id="scoeHolder">
+          <h1 class="score" id="wh1">0</h1>
+          <h1 class="score" id="wh2">0</h1>
+        </div>
+
         <div id="game">
           <div id="ball"></div>
           <div id="counterHoler">
